# transform-graph

./: .gitignore  Agents.md  CHANGELOG.md  README.md  api_doc_v0.1.0.md  pending_issues.md  pyproject.toml  test_cam_front_viz.py  test_compound_projection.py  test_frustum_debug.py  test_inverse_cam.py  test_multi_camera.py  transforms_guidelines.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  copilot-review.yml  release.yml
docs/: Tutorial.md  known_issues.md  matrix_transform_explanation.md  transforms_guidelines.md
docs/architecture/: projection_composition_analysis.md
docs/templates/: custom.css
example/: graph_demo.py  verify_camera_ops.py
notebooks/: Untitled.ipynb  tutorial.ipynb
src/tgraph/: __init__.py  quaternion.py  transform.py  visualization.py
tests/: conftest.py  test_cam_front_viz.py  test_camera_distortion.py  test_composite.py  test_convenience_constructors.py  test_coverage_gaps.py  test_epipolar_geometry.py  test_euler.py  test_frame_ids.py  test_frustum_visualization.py  test_graph_connectivity.py  test_multi_camera.py  test_orthographic_projection.py  test_pose.py  test_projection.py  test_projection_models.py  test_projections.py  test_quaternion_interop.py  test_serialization.py  test_transform.py  test_transform_graph.py  test_transforms.py  test_visualization.py
tools/: generate_api_docs.py
